# BespokeOLAP

./: .env_example  .gitignore  README.md  main.py  pyproject.toml  run_gen_base_impl.py  run_gen_storage_plan.py  run_optim_loop.py
.github/workflows/: pages.yml
benchmark/: README.md  __main__.py  cli.py  run.py  writer.py
benchmark/systems/: __init__.py  base.py  bespoke.py  duckdb.py  registry.py
conversations/: conversation.py  optimization_conversation.py  prompts_gen.py  scripted_conversation.py
conversations/prompts/: expert_knowledge.txt  optim_add_timings_collect_stats.txt  optim_add_timings_collect_stats_per_query.txt  optim_constraints.txt  optim_pretext_general.txt  (+5 more)
dataset/: dataset_tables_dict.py  query_gen_factory.py
llm_cache/: __init__.py  cached_compaction_session.py  cached_litellm.py  cached_openai.py  git_snapshotter.py  logger.py  models.py
misc/: Makefile  cache_reader.py  get_db_procs.sh
plots/: ablation.ipynb  journal_plots.ipynb  plot_timeline.ipynb  plot_timeline.py  strategy_display_names.py  tool_usage_stats.ipynb  wandb_trace_preprocessor.py  wandb_utils.py
tests/: test_gen_ceb_query.py  test_sandbox.py  test_truncate_model_final_output.py  test_validate_tool_old_output_parser.py
tools/: litellm_apply_patch.py  litellm_shell.py  sandbox.py  shell_executor.py  workspace_editor.py
utils/: cli_config.py  cloc_utils.py  gen_common.py  general_utils.py  get_sample_q_args.py  hugepages.py  model_setup.py  snapshot_utils.py  token_usage.py  truncate_csv.py  wandb_api_helper.py  wandb_stats_logging.py
website/: index.html
(+35 files in other folders)
