[project]
name = "bespoke_olap"
version = "0.2.4"
description = "Synthesizing Workload-Specific One-size-fits-one Database Engines."
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "landlock>=1.0.0.dev5",
    "matplotlib>=3.10.8",
    "openai==2.11.0",
    "openai-agents[litellm]>=0.6.3",
    "pandas>=2.3.3",
    "prompt-toolkit>=3.0.52",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv==1.2.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "weave>=0.52.22",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "benchmark*",
    "conversations*",
    "dataset*",
    "llm_cache*",
    "plots*",
    "tools*",
    "utils*",
    "misc*",
]
exclude = ["output*", "wandb*", "tests*", "__pycache__*"]

[tool.setuptools.package-data]
misc = ["**/*.cpp", "**/*.hpp"]
